# quantagentevo

./: .env.backup  .env.example  .gitignore  README.md  all_factors_library.json  all_factors_library.json.bak  all_factors_library_AA.json  all_factors_library_QA_liwei_csi500_best_deepseek_aliyun_123.json  all_factors_library_QA_liwei_sp500_123_best_deepseek_aliyun.json  alpha158_all_factors.json  analyze_aa_factors_ic_2023.py  backtest_v2_results_topk_merged_summary.csv  benchmark_indices_close.csv  check_csi500_benchmark.py  check_qlib_data.py  csi300_hj_2023_ic_analysis.csv  csi500_benchmark_only.csv  decompose_returns.py  export_csi500_AA_top80_result.py  export_csi500_round11_result.py  export_prices.py  export_sp500_daily_excess.py  export_sp500_top150_excess.py  extracted_factors_15604.json  factor_library_manager.py  factor_quality_evaluator.py  fix_sp500_csv.py  merge_alphaagent_results.py  merge_benchmarks.py  merge_csi500_results.py  merge_results.py  monitor_aa_random80.py  monitor_aa_rd.py  monitor_aa_top80.py  prepare_cn_data.py  pyproject.toml  recalc_sp500_excess_correct.py  requirements.txt  show_all_factors.py  show_alpha158_factors.py  (+18 more)
backtest/: README.md  __init__.py  backtest_runner.py  comprehensive_diagnosis.py  custom_factor_calculator.py  factor_analysis.py  factor_calculator.py  factor_loader.py  generate_daily_pv.py  run_backtest.py  run_batch_experiments.py  run_batch_sp500.py  run_csi500_benchmarks.py  run_sp500_benchmarks.py  verify_index.py
backtest_v2/: backtest_runner.py  config.yaml  config_csi500.yaml  config_csi500_AA_random80.yaml  (+11 more)
(+244 files in other folders)
